code/dotnet/SecurityExplanation/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Security Explanation client library for .NET

[![API Version](https://img.shields.io/badge/api-v0.1.0-blue)](https://developer.factset.com/api-catalog/security-explanation-api)
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.SecurityExplanation)](https://www.nuget.org/packages/FactSet.SDK.SecurityExplanation)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to use Security Explanation through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.1.0
- SDK version: 0.10.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.SecurityExplanation -v 0.10.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.SecurityExplanation -Version 0.10.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.SecurityExplanation.Api;
using FactSet.SDK.SecurityExplanation.Client;
using FactSet.SDK.SecurityExplanation.Model;

namespace Example
{
    public static class CheckExplanationStatusExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.SecurityExplanation.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new SecurityExplanationApi(config);
            var id = "80931ca92c7b432380dcd51f539c79f5";  // string | id

            try
            {
                // Get explanation status by id
                ExplanationStatusRoot result = apiInstance.CheckExplanationStatus(id);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling SecurityExplanationApi.CheckExplanationStatus: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/security-explanation/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*SecurityExplanationApi* | [**CheckExplanationStatus**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/SecurityExplanationApi.md#checkexplanationstatus) | **GET** /explanation/{id}/status | Get explanation status by id
*SecurityExplanationApi* | [**FetchExplanationResults**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/SecurityExplanationApi.md#fetchexplanationresults) | **GET** /explanation/{id}/result | Get explanation results by id
*SecurityExplanationApi* | [**GetExplanation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/SecurityExplanationApi.md#getexplanation) | **GET** /explanation | Request explanation


## Documentation for Models

 - [Model.ClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/ClientErrorResponse.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/Error.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/ErrorSource.md)
 - [Model.ExplanationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/ExplanationStatus.md)
 - [Model.ExplanationStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/ExplanationStatusRoot.md)
 - [Model.SecurityExplanationResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/SecurityExplanationResponse.md)
 - [Model.SecurityExplanationResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v0/docs/SecurityExplanationResponseRoot.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
