code/dotnet/SecurityExplanation/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Security Explanation client library for .NET

[![API Version](https://img.shields.io/badge/api-v1.6.0-blue)](https://developer.factset.com/api-catalog/security-explanation-api)
[![Nuget](https://img.shields.io/badge/nuget-v2.2.0-orange)](https://www.nuget.org/packages/FactSet.SDK.SecurityExplanation/2.2.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to use Security Explanation through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.6.0
- SDK version: 2.2.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.SecurityExplanation -v 2.2.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.SecurityExplanation -Version 2.2.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Net;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.SecurityExplanation.Api;
using FactSet.SDK.SecurityExplanation.Client;
using FactSet.SDK.SecurityExplanation.Model;

namespace Example
{
    public static class CheckExplanationStatusExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.SecurityExplanation.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new SecurityExplanationApi(config);
            var id = "80931ca92c7b432380dcd51f539c79f5";  // string | id

            try
            {
                // Get explanation status by id
                SecurityExplanationApi.CheckExplanationStatusResponseWrapper result = apiInstance.CheckExplanationStatus(id);

                switch (result.StatusCode)
                {

                    case (HttpStatusCode)201:
                        Console.WriteLine(result.Response201);
                        break;

                    case (HttpStatusCode)202:
                        Console.WriteLine(result.Response202);
                        break;

                }
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling SecurityExplanationApi.CheckExplanationStatus: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/security-explanation/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*SecurityExplanationApi* | [**CheckExplanationStatus**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/SecurityExplanationApi.md#checkexplanationstatus) | **GET** /explanation/{id}/status | Get explanation status by id
*SecurityExplanationApi* | [**CreateExplanation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/SecurityExplanationApi.md#createexplanation) | **POST** /explanation | Request explanation
*SecurityExplanationApi* | [**FetchExplanationResults**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/SecurityExplanationApi.md#fetchexplanationresults) | **GET** /explanation/{id}/result | Get explanation results by id


## Documentation for Models

 - [Model.APIClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/APIClientErrorResponse.md)
 - [Model.APIError](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/APIError.md)
 - [Model.BrokerResearchSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/BrokerResearchSummary.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/ErrorSource.md)
 - [Model.ExplanationCreateResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/ExplanationCreateResponse.md)
 - [Model.ExplanationCreateResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/ExplanationCreateResponseRoot.md)
 - [Model.ExplanationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/ExplanationStatus.md)
 - [Model.ExplanationStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/ExplanationStatusRoot.md)
 - [Model.SecurityExplanationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/SecurityExplanationParametersRoot.md)
 - [Model.SecurityExplanationRequestParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/SecurityExplanationRequestParameters.md)
 - [Model.SecurityExplanationResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/SecurityExplanationResponse.md)
 - [Model.SecurityExplanationResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityExplanation/v1/docs/SecurityExplanationResponseRoot.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
